--- a/Ej5/postresemana.html
+++ b/Ej5/postresemana.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="Ej4css.css" rel="stylesheet" type="text/css"/>
     <title>Document</title>
 </head>
 <body>
     <h1>Postre de la semana</h1>
     <h2>Boniatos a la mallorquina</h2>
-    <p>Comensales: 4 personas</p>
-    <p>Tiempo de preparación: 15 minutos</p>
-    <p>Tiempo de cocción: 25 minutos</p>
+    <p><i>Comensales:</i> 4 personas</p>
+    <p><i>Tiempo de preparación:</i> 15 minutos</p>
+    <p><i>Tiempo de cocción:</i> 25 minutos</p>
     <h3>Ingredientes:</h3>
-    <p>1kg de boniatos.</p>
-    <p>1/4 litro de miel.</p>
-    <p>Abundante aceite.</p>
+    <ul>
+        <li>1kg de boniatos.</li>
+        <li>1/4 litro de miel.</li>
+        <li>Abundante aceite.</li>
+    </ul>
     <h3>Preparación:</h3>
-    <p>Mondar los boniatos</p>
-    <p>Cortarlos en rodajas de medio centímetro</p>
-    <p>Freirlos en aceite abundante, poco a poco, para que queden bien cocidos</p>
-    <p>Retirarlos cuando estén dorados</p>
-    <p>Servirlos untados por una cara con miel y colocarlos en bandeja con servilleta</p>
+    <ul>
+        <li>Mondar los boniatos</li>
+        <li>Cortarlos en rodajas de medio centímetro</li>
+        <li>Freirlos en aceite abundante, poco a poco, para que queden bien cocidos</li>
+        <li>Retirarlos cuando estén dorados</li>
+        <li>Servirlos untados por una cara con miel y colocarlos en bandeja con servilleta</li>
+    </ul>
 </body>
 </html>
